--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   height: 100dvh;
   margin: 0;
-  background: #1e1e1e;
+  background: #02001a;
   color: #f5f5f5;
   text-align: center;
 }
@@ -31,4 +31,38 @@ p {
   background: #333;
   border-radius: 10px;
   margin-top: 10px;
+}
+
+#venus {
+  min-width: 20px;
+  min-height: 20px;
+  background: radial-gradient(circle, #f8c471, #ff5733);
+  border-radius: 50%;
+  box-shadow: 0 0 10px #f8c471;
+  position: absolute;
+
+  animation: twinkle 2s infinite alternate;
+}
+
+@keyframes twinkle {
+  0% {
+      box-shadow: 0 0 20px #f8c471;
+      transform: scale(1);
+  }
+  20% {
+      box-shadow: 0 0 40px #ff5733;
+      transform: scale(1.1);
+  }
+  30% {
+      box-shadow: 0 0 20px #f8c471;
+      transform: scale(1);
+  }
+  70% {
+      box-shadow: 0 0 20px #f8c471;
+      transform: scale(1.1);
+  }
+  100% {
+      box-shadow: 0 0 20px #f8c471;
+      transform: scale(1);
+  }
 }
